# stm32n6_nucleo_base

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CubeMX.ioc  Readme.md  build.sh  mx-generated.cmake  starm-clang.cmake
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
AppliNonSecure/: CMakeLists.txt  STM32N657XX_LRUN_ns.ld  mx-generated.cmake
AppliNonSecure/Core/Inc/: main.h  stm32n6xx_it.h
AppliNonSecure/Core/Src/: main.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c
AppliNonSecure/src/CubeMX_AppliNonSecure-stamp/: CubeMX_AppliNonSecure-source_dirinfo.txt
AppliNonSecure/tmp/: CubeMX_AppliNonSecure-mkdirs.cmake
AppliSecure/: CMakeLists.txt  STM32N657XX_LRUN_s.ld  mx-generated.cmake
AppliSecure/Core/Src/: main.c
AppliSecure/src/CubeMX_AppliSecure-stamp/: CubeMX_AppliSecure-source_dirinfo.txt
AppliSecure/tmp/: CubeMX_AppliSecure-cfgcmd.txt  CubeMX_AppliSecure-mkdirs.cmake
FSBL/: CMakeLists.txt  STM32N657XX_AXISRAM2_fsbl.ld  mx-generated.cmake
FSBL/Core/Inc/: main.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h  stm32n6xx_nucleo_conf.h
FSBL/Core/Src/: main.c  stm32n6xx_it.c
Inc/: freertos_tasks_c_additions.h
Middlewares/FreeRTOS/: CMakeLists.txt
Modules/DummyApp/: CMakeLists.txt  Dummy.cpp  Dummy.hpp
